[package]
name = "chzzk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
http = "1.4.0"
lru = "0.18.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["gzip", "brotli", "zstd", "deflate"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
